feat: Add AI voice chat and medication reminder features
- Add press-to-talk voice input with Qwen2-Audio
- Add AI photo recognition for medication packages
- Add medication reminder with multiple daily times
- Add daily reset for medication taken status
- Add notification permission request on app start
- Update README with project documentation

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ retrofit = "2.11.0"
 okhttp = "4.12.0"
 room = "2.6.1"
 ksp = "2.0.0-1.0.22"
+workmanager = "2.9.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,9 @@ okhttp-logging = { group = "com.squareup.okhttp3", name = "logging-interceptor",
 androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
 androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+
+# WorkManager
+androidx-work-runtime = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workmanager" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
