feat:Add the function of scanning codes for pairing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,12 @@
             android:theme="@style/Theme.SilverLink"
             android:showOnLockScreen="true"
             android:launchMode="singleTop" />
+
+        <activity
+            android:name=".ui.onboarding.QrScanPortraitActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.SilverLink" />
         
         <!-- Receiver for Alarm -->
         <receiver android:name=".feature.reminder.AlarmReceiver" 
