feat: add cognitive assessment to elder side and fix ChartTypeToggle layout
- Add cognitive report states and fetchCognitiveReport() to HistoryViewModel
- Add CognitiveReportCard UI to HistoryScreen for elder side
- Add getSelfCognitiveReport() to SyncRepository for elder self-query
- Make familyDeviceId nullable in CloudBaseApi and CloudBaseService
- Update cognitive-report cloud function to support elder self-queries
- Fix ChartTypeToggle text wrapping (maxLines=1, reduced padding)
- Update README.md with new features (Memory Time Machine, Cognitive Assessment, Proactive Interaction)

--- a/cloud-functions/memory-photo-credentials/package.json
+++ b/cloud-functions/memory-photo-credentials/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memory-photo-credentials",
   "version": "1.0.0",
-  "description": "生成 COS 上传凭证",
+  "description": "获取上传凭证",
   "main": "index.js",
   "dependencies": {
     "@cloudbase/node-sdk": "latest"
